#259 Better check for absolute urlness